Upgrade to LTS2025 in progress